--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>The Psychic Game</title>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <script type="text/javascript" src="/Users/angeloaquino/projects/Psychic-Game/assets/javascript/game.js"></script>
+    <script type="text/javascript" src="./assets/javascript/game.js"></script>
 
     </head>
 <body> 
