--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 
     </head>
 <body> 
-        <div id="psychicGame">
-                <h1>The Psychic Game</h1>
-                <p>Guess what letter I'm thinking of !</p>
-                <p>Total Wins: </p>
-                <p>Total Losses: </p>
-                <p>Guesses Left: </p>
-                <p>Your Guesses so far: </p>
+    <div id="psychicGame">
+    <h1>The Psychic Game</h1>
+    <br>
+    <br>
+                <p>Guess what letter I'm thinking of !</p> <br>
+                <p>Total Wins: </p> <br>
+                <p>Total Losses: </p> <br>
+                <p>Guesses Left: </p> <br>
+                <p>Your Guesses so far: </p> 
         </div>
 </body>
 </html>
