--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>The Psychic Game</h1>
     <br>
     <br>
-                <p>Guess what letter I'm thinking of !</p> <br>
+                <p>Guess what letter I'm thinking of</p> <br>
                 <p>Total Wins: </p> <br>
                 <p>Total Losses: </p> <br>
                 <p>Guesses Left: </p> <br>
